Working on checkout testcase

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -3,3 +3,8 @@ base_url = https://www.saucedemo.com/
 browser = chrome
 username = standard_user
 password = secret_sauce
+
+[Checkout Info]
+first_name = Joho
+last_name = Doe
+zip_code = 12345
